Modify spec
